// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should render dropdown and make it visible on click 1`] = `
.c0 {
  text-align: left;
  position: relative;
}

.c1 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c5 {
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  width: 100%;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
  height: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c20 {
  margin-left: 0px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c25 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c26 {
  padding-right: 16px;
  padding-left: 16px;
  margin-bottom: 16px;
  margin-top: 16px;
  touch-action: none;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 16px;
  margin-right: auto;
}

.c29 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c32 {
  border-width: 0px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-style: solid;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 20px;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c38 {
  padding-right: 8px;
  padding-left: 0px;
}

.c40 {
  margin-left: auto;
}

.c41 {
  padding: 16px;
}

.c22 {
  position: absolute;
  width: 100%;
  right: 0px;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c23 {
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-color: hsla(216,15%,54%,0.18);
  border-style: solid;
  border-radius: 4px;
}

.c24 {
  -webkit-animation: hEZwlf 200ms cubic-bezier(0,0,0,1);
  animation: hEZwlf 200ms cubic-bezier(0,0,0,1);
  -webkit-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  opacity: 0;
  z-index: 99;
  pointer-events: all;
}

.c42 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c42:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c42:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c42:focus {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c42 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c31 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c39 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c45 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  display: none;
}

.c44 {
  opacity: 1;
}

.c33 {
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c12::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12:focus {
  outline: none;
}

.c19 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  background-color: hsla(218,89%,51%,1);
  border-width: 1px;
  height: 1px;
  -webkit-animation: cAlpMa 250ms cubic-bezier(0.3,0,0.2,1) forwards;
  animation: cAlpMa 250ms cubic-bezier(0.3,0,0.2,1) forwards;
}

.c10 {
  -webkit-animation: hEoffO 200ms cubic-bezier(0,0,0.2,1);
  animation: hEoffO 200ms cubic-bezier(0,0,0.2,1);
}

.c11 {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c11:hover {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c11:focus-within {
  background-color: hsla(218,89%,51%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c34 {
  overflow-y: auto;
  max-height: 300px;
  padding: 8px;
}

.c34 [role=group]:last-child > [role=separator]:last-child {
  display: none;
}

.c35 {
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
  text-align: left;
  background-color: transparent;
  padding: 4px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  display: block;
}

.c35:hover:not([aria-disabled=true]) {
  background-color: hsla(216,15%,54%,0.09);
}

.c35[aria-selected=true] {
  background-color: hsla(218,89%,51%,0.09);
}

@media screen and (min-width:768px) {
  .c26 {
    padding-right: 20px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
  }
}

@media screen and (min-width:320px) {
  .c32 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c32 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c32 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c32 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c32 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c41 {
    padding: 20px;
  }
}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="visually-hidden"
        >
          <input
            aria-hidden="true"
            tabindex="-1"
            value=""
          />
        </div>
        <div
          class=""
          data-blade-component="select-input"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <label
                data-blade-component="form-label"
                for="dropdown-7-trigger-1-input-2"
                id="dropdown-7-label"
                style="width: auto; flex-shrink: 0; margin-right: 16px;"
              >
                <div
                  class="c5"
                  data-blade-component="base-box"
                >
                  <div
                    class="c6"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    >
                      Fruits
                    </p>
                    <div
                      class="c2"
                      data-blade-component="visually-hidden"
                    >
                      <p
                        class="c8"
                        data-blade-component="text"
                      />
                    </div>
                  </div>
                </div>
              </label>
            </div>
            <div
              class="c9 c10 c11"
              data-blade-component="base-box"
            >
              <button
                aria-controls="dropdown-7-actionlist"
                aria-describedby=""
                aria-disabled="false"
                aria-expanded="true"
                aria-haspopup="dialog"
                aria-invalid="false"
                aria-required="false"
                class="c12"
                data-blade-component="styled-base-input"
                id="dropdown-7-trigger-1-input-2"
                placeholder="Select Option"
                role="combobox"
                type="button"
                value=""
              >
                <p
                  class="c13"
                  data-blade-component="text"
                >
                  Select Option
                </p>
              </button>
              <div
                class="c14"
                data-blade-component="base-box"
              >
                <div
                  class="c15"
                  data-blade-component="base-box"
                >
                  <div
                    class="c16"
                    data-blade-component="base-box"
                  >
                    <svg
                      aria-hidden="true"
                      class="c17"
                      data-blade-component="icon"
                      fill="none"
                      height="16px"
                      viewBox="0 0 24 24"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                        data-blade-component="svg-path"
                        fill="hsla(217, 56%, 17%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="c18"
                      data-blade-component="icon"
                      fill="none"
                      height="16px"
                      viewBox="0 0 24 24"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                        data-blade-component="svg-path"
                        fill="hsla(217, 56%, 17%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class=" c19"
                data-blade-component="base-box"
              />
            </div>
          </div>
          <div
            class="c20"
            data-blade-component="base-box"
          >
            <div
              class="c21"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c22 c23 c24"
          data-blade-component="dropdown-overlay"
          elevation="midRaised"
          style="opacity: 1;"
        >
          <div
            class="c25"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="dropdown-header"
            >
              <div
                class="c26"
                data-blade-component="base-box"
              >
                <div
                  class="c27"
                  data-blade-component="base-box"
                >
                  <div
                    class="c28"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c29"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c30"
                        data-blade-component="base-box"
                      >
                        <h6
                          class="c31"
                          data-blade-component="heading"
                        >
                          Recent Searches
                        </h6>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c32 c33"
                data-blade-component="divider"
              />
            </div>
          </div>
          <div
            aria-labelledby="dropdown-7-label"
            class=""
            data-blade-component="action-list"
            id="dropdown-7-actionlist"
            role="dialog"
          >
            <div
              aria-multiselectable="false"
              class=" c34"
              data-blade-component="base-box"
              role="listbox"
            >
              <button
                aria-selected="false"
                class=" c35"
                data-blade-component="action-list-item"
                data-index="0"
                data-value="apple"
                id="dropdown-7-0"
                role="option"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c36"
                  data-blade-component="base-box"
                >
                  <div
                    class="c37"
                    data-blade-component="base-box"
                  />
                  <div
                    class="c38"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c39"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                  <div
                    class="c40"
                    data-blade-component="base-box"
                  />
                </div>
                <div
                  class=""
                  data-blade-component="base-box"
                />
              </button>
              <button
                aria-selected="false"
                class=" c35"
                data-blade-component="action-list-item"
                data-index="1"
                data-value="mango"
                id="dropdown-7-1"
                role="option"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c36"
                  data-blade-component="base-box"
                >
                  <div
                    class="c37"
                    data-blade-component="base-box"
                  />
                  <div
                    class="c38"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c39"
                      data-blade-component="text"
                    >
                      Mango
                    </p>
                  </div>
                  <div
                    class="c40"
                    data-blade-component="base-box"
                  />
                </div>
                <div
                  class=""
                  data-blade-component="base-box"
                />
              </button>
            </div>
          </div>
          <div
            class=""
            data-blade-component="base-box"
            role="group"
          >
            <div
              class="c32 c33"
              data-blade-component="divider"
            />
            <div
              class="c41"
              data-blade-component="dropdown-footer"
            >
              <div
                class=""
                data-blade-component="box"
              >
                <button
                  class="c42"
                  data-blade-component="button"
                  role="button"
                  type="button"
                >
                  <div
                    class="c43 c44"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c45"
                      data-blade-component="base-text"
                    >
                      Apply
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> with <DropdownButton /> should render menu and make items clickable 1`] = `
.c0 {
  text-align: left;
  position: relative;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 20px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  padding-right: 8px;
  padding-left: 0px;
}

.c15 {
  margin-left: auto;
}

.c6 {
  position: absolute;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 240px;
  max-width: 400px;
  right: 0px;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
}

.c7 {
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-color: hsla(216,15%,54%,0.18);
  border-style: solid;
  border-radius: 4px;
}

.c8 {
  -webkit-animation: none;
  animation: none;
  -webkit-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  opacity: 0;
  z-index: 99;
  pointer-events: none;
}

.c1 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c1:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c1:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c1:focus {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c1 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c3 {
  opacity: 1;
}

.c9 {
  overflow-y: auto;
  max-height: 300px;
  padding: 8px;
}

.c9 [role=group]:last-child > [role=separator]:last-child {
  display: none;
}

.c10 {
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
  text-align: left;
  background-color: transparent;
  padding: 4px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  display: block;
}

.c10:hover:not([aria-disabled=true]) {
  background-color: hsla(216,15%,54%,0.09);
}

.c10[aria-selected=true] {
  background-color: hsla(218,89%,51%,0.09);
}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <button
        aria-controls="dropdown-929-actionlist"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c1"
        data-blade-component="button"
        role="button"
        type="button"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            My Account
          </div>
        </div>
      </button>
      <div
        class="c5"
        data-blade-component="base-box"
      >
        <div
          class="c6 c7 c8"
          data-blade-component="dropdown-overlay"
          elevation="midRaised"
          style="opacity: 0;"
        >
          <div
            aria-labelledby="dropdown-929-label"
            class=""
            data-blade-component="action-list"
            id="dropdown-929-actionlist"
            role="menu"
          >
            <div
              class=" c9"
              data-blade-component="base-box"
            >
              <button
                class=" c10"
                data-blade-component="action-list-item"
                data-index="0"
                data-value="profile"
                id="dropdown-929-0"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c11"
                  data-blade-component="base-box"
                >
                  <div
                    class="c12"
                    data-blade-component="base-box"
                  />
                  <div
                    class="c13"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c14"
                      data-blade-component="text"
                    >
                      Profile
                    </p>
                  </div>
                  <div
                    class="c15"
                    data-blade-component="base-box"
                  />
                </div>
                <div
                  class=""
                  data-blade-component="base-box"
                />
              </button>
              <a
                class=" c10"
                data-blade-component="action-list-item"
                data-index="1"
                data-value="settings"
                href="/settings"
                id="dropdown-929-1"
                role="link"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c11"
                  data-blade-component="base-box"
                >
                  <div
                    class="c12"
                    data-blade-component="base-box"
                  />
                  <div
                    class="c13"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c14"
                      data-blade-component="text"
                    >
                      Settings
                    </p>
                  </div>
                  <div
                    class="c15"
                    data-blade-component="base-box"
                  />
                </div>
                <div
                  class=""
                  data-blade-component="base-box"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
